[package]
name = "dst-admin-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "dst_admin_rust"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "multipart", "query", "tokio", "ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
yaml_serde = "0.10"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
